Websocket server, replaced DatatypeConverter with Base64