@@ -42,7 +42,8 @@ import java.nio.*;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import javax.xml.bind.DatatypeConverter;
+//import javax.xml.bind.DatatypeConverter;
+import java.util.Base64;
 import java.security.MessageDigest;
 //for test
 import java.sql.Timestamp;
@@ -549,11 +550,10 @@ public class GdhWebSocketServer
 				 + "Connection: Upgrade\r\n"
 				 + "Upgrade: websocket\r\n"
 				 + "Sec-WebSocket-Accept: "
-				 + DatatypeConverter.printBase64Binary( 
-								       MessageDigest
-								       .getInstance("SHA-1")
-								       .digest((match.group(1) + "258EAFA5-E914-47DA-95CA-C5AB0DC85B11")
-									       .getBytes("UTF-8")))
+				 + Base64.getEncoder().encodeToString(
+				     MessageDigest.getInstance("SHA-1")
+				     .digest((match.group(1) + "258EAFA5-E914-47DA-95CA-C5AB0DC85B11")
+					     .getBytes("UTF-8")))
 				 + "\r\n\r\n")
 		  .getBytes("UTF-8");
 	      out.write(response, 0, response.length);
